# langgraph-agent

./: .gitignore  01_agents.ipynb  02_travel_agent.ipynb  03_travel_agent_mcp.ipynb  04_persistence.ipynb  05_streaming.ipynb  COMMANDS.md  README.md  justfile  pyproject.toml
.ipython/profile_default/startup/: 00-load-dotenv.py
checkpointers/: .env.example  .gitignore  01_sqlite_checkpointer.ipynb  02_postgres_checkpointer.ipynb  03_mongodb_checkpointer.ipynb  README.md
checkpointers/mongodb/: chat.py  checkpointer.py  docker-compose.yml  notebook.ipynb  requirements.txt
checkpointers/postgres/: chat.py  docker-compose.yml  notebook.ipynb  requirements.txt
checkpointers/sqlite/: chat.py  notebook.ipynb  requirements.txt
diagrams/: 01_react_agent.drawio  02_travel_agent.drawio  03_travel_agent_mcp.drawio  workshop_diagrams.drawio
persistence_deck/: HANDOFF.md
persistence_deck/diagrams/: LangGraph_Persistence_diagrams_light.drawio  index.html
persistence_deck/diagrams/src_light/: 01_Architecture.drawio  02_Threads.drawio  03_Super-steps.drawio  04_Checkpoint_lifecycle.drawio  05_State_evolution.drawio  06_Reducers.drawio  07_StateSnapshot.drawio  08_History.drawio  09_Replay.drawio  10_Fork_-_update_state.drawio  11_Human-in-the-loop.drawio  12_Fault_tolerance.drawio  13_Short_vs_long-term.drawio  14_Durability_modes.drawio  15_Checkpointer_libraries.drawio  16_Mental_model.drawio
travel_agent/: README.md  agent.py  cli.py  requirements.txt  tools.py
travel_agent_mcp/: README.md  agent.py  cli.py
travel_mcp_server/: README.md  server.py
