[project]
name = "langgraph-workshop"
version = "0.1.0"
description = "LangGraph workshop: agents, MCP tools, persistence, streaming + a travel agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.3.1",
    "grandalf==0.8",
    "ipykernel==7.2.0",
    "jupyter==1.1.1",
    "langchain==1.3.2",
    "langchain-mcp-adapters==0.2.2",
    "langchain-openai==1.2.2",
    "langchain-tavily==0.2.18",
    "langgraph==1.2.2",
    "langgraph-checkpoint-sqlite==3.1.0",
    "python-dotenv==1.2.2",
    "rich==15.0.0",
]
